Set up API with Clean Architecture, Central Package Management, and static analysis and styles

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     ],
     "web/**/*.{json,css,md}": [
       "bun --cwd web run prettier:staged"
+    ],
+    "api/**/*.{cs,csproj}": [
+      "dotnet format api --include"
     ]
   }
 }
