Setup tanstack-router, tanstack-query, shadcn

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,15 @@
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "always"
+  },
+  "files.readonlyInclude": {
+    "**/routeTree.gen.ts": true
+  },
+  "files.watcherExclude": {
+    "**/routeTree.gen.ts": true
+  },
+  "search.exclude": {
+    "**/routeTree.gen.ts": true
   }
   // "i18n-ally.localesPaths": ["src/locales"],
   // "i18n-ally.keystyle": "nested",
