--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,13 +13,13 @@
   "search.exclude": {
     "**/routeTree.gen.ts": true
   },
-  "typescript.preferences.importModuleSpecifier": "non-relative"
-  // "i18n-ally.localesPaths": ["src/locales"],
-  // "i18n-ally.keystyle": "nested",
-  // "i18n-ally.namespace": true,
-  // "i18n-ally.pathMatcher": "{locale}/{namespace}.json",
-  // "i18n-ally.enabledParsers": ["json"],
-  // "i18n-ally.displayLanguage": "en",
-  // "i18n-ally.sourceLanguage": "en",
-  // "i18n-ally.enabledFrameworks": ["next-intl", "react"]
+  "typescript.preferences.importModuleSpecifier": "non-relative",
+  "i18n-ally.localesPaths": ["web/src/locales"],
+  "i18n-ally.keystyle": "nested",
+  "i18n-ally.namespace": true,
+  "i18n-ally.pathMatcher": "{locale}/{namespace}.json",
+  "i18n-ally.enabledParsers": ["json"],
+  "i18n-ally.displayLanguage": "en",
+  "i18n-ally.sourceLanguage": "en",
+  "i18n-ally.enabledFrameworks": ["react-i18next"]
 }
