--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,8 @@
     "prettier:staged": "prettier --write",
     "lint:check": "eslint .",
     "lint:fix": "eslint --fix .",
-    "lint:staged": "eslint --fix"
+    "lint:staged": "eslint --fix",
+    "i18n:extract": "i18next-resources-for-ts interface -i ./src/locales/en -o ./src/lib/i18n/resources.d.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -89,8 +90,12 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unicorn": "^60.0.0",
     "globals": "^16.3.0",
+    "i18next": "^25.4.2",
+    "i18next-resources-for-ts": "^1.7.1",
+    "i18next-resources-to-backend": "^1.2.1",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "react-i18next": "^15.7.3",
     "tw-animate-css": "^1.3.7",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
