Add language switcher and localization support

--- a/web/package.json
+++ b/web/package.json
@@ -91,6 +91,7 @@
     "eslint-plugin-unicorn": "^60.0.0",
     "globals": "^16.3.0",
     "i18next": "^25.4.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "i18next-resources-for-ts": "^1.7.1",
     "i18next-resources-to-backend": "^1.2.1",
     "prettier": "^3.6.2",
