--- a/api/.editorconfig
+++ b/api/.editorconfig
@@ -382,3 +382,4 @@ dotnet_naming_style.s_camelcase.capitalization = camel_case
 
 # C# Analyzer
 dotnet_diagnostic.CA1711.severity = none
+dotnet_diagnostic.CA1707.severity = none
