Implement email sending on user registration using Hangfire and FluentEmail, and set up Docker-Compose with services for the database, Redis, and Mailpit.

--- a/api/src/App.Api/appsettings.Example.json
+++ b/api/src/App.Api/appsettings.Example.json
@@ -2,12 +2,14 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Hangfire": "Information"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=graduation_db;Username=postgres;Password=your_password"
+    "DefaultConnection": "Host=localhost;Database=graduation_db;Username=postgres;Password=your_password",
+    "HangfireConnection": "Server=localhost;Database=YourApp_Hangfire;Trusted_Connection=true;TrustServerCertificate=true;"
   },
   "Jwt": {
     "SecretKey": "YourSuperSecretKeyThatShouldBeAtLeast32Characters",
@@ -17,5 +19,19 @@
   },
   "Auth": {
     "EmailVerificationTokenExpirationMinutes": 30
+  },
+  "Email": {
+    "Smtp": {
+      "Host": "localhost",
+      "Port": 1025,
+      "Username": "",
+      "Password": "",
+      "EnableSsl": false
+    },
+    "From": {
+      "Name": "Graduation App",
+      "Address": "noreply@graduation.com"
+    },
+    "BaseUrl": "https://localhost:7000"
   }
 }
