--- a/api/src/App.Api/App.Api.csproj
+++ b/api/src/App.Api/App.Api.csproj
@@ -1,4 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
+  
+  <PropertyGroup>
+    <PreserveCompilationContext Condition="'$(Configuration)' == 'Debug'">true</PreserveCompilationContext>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\App.Application\App.Application.csproj" />
     <ProjectReference Include="..\App.Infrastructure\App.Infrastructure.csproj" />
