Integrate frontend register with the server

--- a/api/src/App.Api/appsettings.Example.json
+++ b/api/src/App.Api/appsettings.Example.json
@@ -11,6 +11,9 @@
     "DefaultConnection": "Host=localhost;Database=graduation_db;Username=postgres;Password=your_password",
     "HangfireConnection": "Server=localhost;Database=YourApp_Hangfire;Trusted_Connection=true;TrustServerCertificate=true;"
   },
+  "Cors": {
+    "AllowedOrigins":["http://localhost:3000", "https://localhost:3000"]
+  },
   "Jwt": {
     "SecretKey": "YourSuperSecretKeyThatShouldBeAtLeast32Characters",
     "Issuer": "App.Api",
