--- a/web/package.json
+++ b/web/package.json
@@ -48,6 +48,7 @@
     "@tanstack/react-query-devtools": "^5.85.8",
     "@tanstack/react-router": "^1.131.31",
     "@tanstack/react-router-devtools": "^1.131.31",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
