Integrate frontend forgot, reset-password

--- a/api/src/App.Api/appsettings.Example.json
+++ b/api/src/App.Api/appsettings.Example.json
@@ -21,7 +21,8 @@
     "AccessTokenExpirationMinutes": 30
   },
   "Auth": {
-    "EmailVerificationTokenExpirationMinutes": 30
+    "EmailVerificationTokenExpirationMinutes": 30,
+    "PasswordResetTokenExpirationHours": 1
   },
   "Email": {
     "Smtp": {
