Refactor login flow to use cookie httponly instead of directly return accesstoken and refreshtoken

--- a/api/src/App.Api/appsettings.Example.json
+++ b/api/src/App.Api/appsettings.Example.json
@@ -21,8 +21,18 @@
     "AccessTokenExpirationMinutes": 30
   },
   "Auth": {
+    "RefreshTokenExpirationDays": 30,
     "EmailVerificationTokenExpirationMinutes": 30,
     "PasswordResetTokenExpirationHours": 1
+  },
+  "AuthCookieSettings": {
+    "AccessTokenCookieName": "auth_access_token",
+    "RefreshTokenCookieName": "auth_refresh_token",
+    "Domain": "",
+    "Path": "/",
+    "HttpOnly": true,
+    "Secure": false,
+    "SameSite": "Lax"
   },
   "Email": {
     "Smtp": {
