--- a/api/src/App.Api/appsettings.Example.json
+++ b/api/src/App.Api/appsettings.Example.json
@@ -8,11 +8,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=graduation_db;Username=postgres;Password=your_password",
-    "HangfireConnection": "Server=localhost;Database=YourApp_Hangfire;Trusted_Connection=true;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=localhost,1433;Database=graduation;User Id=sa;Password=SqlServer123!;Encrypt=true;TrustServerCertificate=true",
+    "HangfireConnection": "Server=localhost,1433;Database=graduation;User Id=sa;Password=SqlServer123!;Encrypt=true;TrustServerCertificate=true"
   },
   "Cors": {
-    "AllowedOrigins":["http://localhost:3000", "https://localhost:3000"]
+    "AllowedOrigins": ["http://localhost:3000", "https://localhost:3000"]
   },
   "Jwt": {
     "SecretKey": "YourSuperSecretKeyThatShouldBeAtLeast32Characters",
@@ -46,6 +46,6 @@
       "Name": "Graduation App",
       "Address": "noreply@graduation.com"
     },
-    "BaseUrl": "https://localhost:7000"
+    "BaseUrl": "https://localhost:3000"
   }
 }
