Add refresh, logout and get current user information for admin

--- a/api/src/App.Api/appsettings.Example.json
+++ b/api/src/App.Api/appsettings.Example.json
@@ -12,7 +12,12 @@
     "HangfireConnection": "Server=localhost,1433;Database=graduation;User Id=sa;Password=SqlServer123!;Encrypt=true;TrustServerCertificate=true"
   },
   "Cors": {
-    "AllowedOrigins": ["http://localhost:3000", "https://localhost:3000"]
+    "AllowedOrigins": [
+      "http://localhost:3000",
+      "https://localhost:3000",
+      "http://localhost:3100",
+      "https://localhost:3100"
+    ]
   },
   "Jwt": {
     "SecretKey": "YourSuperSecretKeyThatShouldBeAtLeast32Characters",
