--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "workspaces": [
     "web",
-    "api"
+    "api",
+    "admin"
   ],
   "scripts": {
     "prepare": "husky"
@@ -15,12 +16,17 @@
   "lint-staged": {
     "web/**/*.{js,jsx,ts,tsx}": [
       "bun --cwd web run lint:staged",
-      "bun --cwd web run prettier:staged",
-      "bun --cwd admin run lint:staged",
-      "bun --cwd admin run prettier:staged"
+      "bun --cwd web run prettier:staged"
     ],
     "web/**/*.{json,css,md}": [
       "bun --cwd web run prettier:staged",
+      "bun --cwd admin run prettier:staged"
+    ],
+    "admin/**/*.{js,jsx,ts,tsx}": [
+      "bun --cwd admin run lint:staged",
+      "bun --cwd admin run prettier:staged"
+    ],
+    "admin/**/*.{json,css,md}": [
       "bun --cwd admin run prettier:staged"
     ],
     "api/**/*.{cs,csproj}": [
